--- a/templates/top.html
+++ b/templates/top.html
@@ -12,5 +12,5 @@
       <link rel="stylesheet" href="styling/skillssheet.css">
       <link rel = "stylesheet" href= "styling/cssMycite.css">
       
-      <title> {{title}}</title>
+      <title>{title}</title>
   </head>
