title change using python works

--- a/templates/top.html
+++ b/templates/top.html
@@ -12,5 +12,5 @@
       <link rel="stylesheet" href="styling/skillssheet.css">
       <link rel = "stylesheet" href= "styling/cssMycite.css">
       
-      <title>Simon Tekeste</title>
+      <title>{{title}}</title>
   </head>
